--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- fixed header -->
     <nav class="navbar navbar-expand-md fixed-top">
-        <a class="navbar-brand" href="#"><img src="img/logo.svg" alt=""></a>
+        <a class="navbar-brand" href="#"><img src="img/logo.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
                 <img src="img/nav/burger.svg" alt="burger">
@@ -57,27 +57,59 @@
             <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
             <div class="row">
                 <div class="col-md-8">
-                    <h1>Константин Лашкевич</h1>
-                    <p class="undertitle">Инвестор IT, ed-tech, LMS <br> Реальный практик корпоративного управления <i>идеолог Позитивного Менеджмента</i></p>
+                    <h1>1ldar Valiev</h1>
+                    <p class="undertitle">👔 Сертифицированный бизнес тренер<br>
+                                    💯 Харизматичный, Умею обучать людей<br>
+                                    📘 Автор книги «Быть СЧАСТЛИВЫМ»<br>
+                                    😉 Помогаю реализовать потенциал Личности и Компании<br>
+
+                                    🎓 3 Диплома с отличием <br>
+                                    - Магистр техники и технологии,<br>
+                                    - Маркетолог<br>
+                                    - Юрист<br>
+                                            </p>
                     <div class="card">
                         <ul>
-                            <li><img src="img/sec_1/ok.svg" alt="ok"><span><b>№1</b> в России по трансформации корпоративной культуры для Х-кратного роста</span></li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">20 лет в бизнесе с акционерами топ Forbes</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">11 лет управления холдингами</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">5 лет на позиции Президента холдинга RFP Group</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">Возглавлял холдинги “ННК” и “Вторчермет НЛМК” и вывел в лидеры рынка</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">Инвестор в проекте Smart Expert</li>
+                            <p>1. Оценка технического состояния промышленных объектов:<br>
+                              <li><img src="img/sec_1/ok.svg" alt="ok">- техническая диагностика ( НК, РК)</li>
+                              <li><img src="img/sec_1/ok.svg" alt="ok">- экспертиза промышленной безопасности (ОБ, КЛ/ТП, ТУ, ЗиС)</li>
+                              <li><img src="img/sec_1/ok.svg" alt="ok">- сертификация (ТР ТС)👨‍🔧
+                              </li>
+                            2. Капитальный ремонт и техническое обслуживание объектов энергетики👨‍🚀 </p>
+                            <p>3. Бизнес тренер:<br>
+                              <li><img src="img/sec_1/ok.svg" alt="ok">- Обучу ставить цель и достигать ее в кратчайшие сроки</li>
+                              <li><img src="img/sec_1/ok.svg" alt="ok">- Мыслить, как Дизайнер (создавать креативные Решения)</li>
+                              <li><img src="img/sec_1/ok.svg" alt="ok">- Легко общаться с любым человеком
+                              (Помогу создать Твой стиль успешного поведения с партнером)
+                            </li> </p>
+                            <p>
+                             🤓 Мои хобби и увлечения:<br>
+                                1. Каждый год осваивать 2 новых навыка<br>
+                                2. Спорт<br>
+                                - Большой теннис (ракетка Севера 2000 год)<br>
+                                - Настольный теннис (просто классно играю)<br>
+                                - Горные лыжи (фрирайд, в 2019 году научился управлять на  скорости 140 км/ч), сноуборд<br>
+                                - Бег (пробежал полумарафон, продолжаю тренироваться)<br>
+                                - Самбо (3 место в группе до 65 кг на универсиаде 2005 года)<br>
+                                - Хоккей, Ролики (поспорим, ты меня не догонишь)<br>
+                                - Велосипед (за 10 часов проехал 311 км по Москве)<br>
+                                3. Мото<br>
+                                4. Катера и лодки<br>
+                                5. Диджей “Malinkin” Vinyls player (Великолепная коллекция  deep, minimal, house)<br>
+                                6. Гитара<br>
+                                7. Барабаны
+                              </li> </p>
                         </ul>
                     </div>
-                    <div class="works">
+                  <!--  <div class="works">
                         <img src="img/sec_1/work_1.png" alt="">
                         <img src="img/sec_1/work_2.png" alt="">
                         <img src="img/sec_1/work_3.png" alt="">
-                    </div>
+                    </div> -->
                 </div>
                 <div class="col-md-4">
                     <div class="img_wrapp">
-                        <img src="img/sec_1/konstantin.png" alt="SE">
+                        <img src="img/sec_1/ildar.png" alt="SE">
                     </div>
                 </div>
             </div>
@@ -94,7 +126,7 @@
                 <div class="col-lg-5 d-flex justify-content-center">
                     <div class="card_transparent">
                         <div class="icon_avatar" style="background-image: url('img/sec_bio/konstantin.jpg')"></div>
-                        <h5>Константин Лашкевич</h5>
+                        <h5>1ldar Valiev</h5>
                         <div class="soc_links_wrapp">
                             <a href="#" class="item"><img src="img/soc_links/fb.svg" alt="fb"></a>
                             <a href="#" class="item"><img src="img/soc_links/vk.svg" alt="vk"></a>
