--- a/index.html
+++ b/index.html
@@ -125,28 +125,34 @@
             <div class="row align-items-center">
                 <div class="col-lg-5 d-flex justify-content-center">
                     <div class="card_transparent">
-                        <div class="icon_avatar" style="background-image: url('img/sec_bio/konstantin.jpg')"></div>
+                        <div class="icon_avatar" style="background-image: url('img/sec_bio/ildar.jpg')"></div>
                         <h5>1ldar Valiev</h5>
-                        <div class="soc_links_wrapp">
-                            <a href="#" class="item"><img src="img/soc_links/fb.svg" alt="fb"></a>
-                            <a href="#" class="item"><img src="img/soc_links/vk.svg" alt="vk"></a>
-                            <a href="#" class="item"><img src="img/soc_links/tw.svg" alt="tw"></a>
-                            <a href="#" class="item"><img src="img/soc_links/tg.svg" alt="tg"></a>
-                            <a href="#" class="item"><img src="img/soc_links/in.svg" alt="in"></a>
+
+                        <div class="soc_links_wrapp justify-content-center">
+
+                            <a href="https://www.facebook.com/1ldarValieV" class="item"><img src="img/soc_links/fb.svg" alt="fb"></a>
+
+                            <a href="https://www.instagram.com/1ldarvaliev/" class="item"><img src="img/soc_links/in.svg" alt="in"></a>
                         </div>
-                        <a href="#" class="btn btn-blue">История взлетов и падений</a>
+                        <a href="http://1ldarvaliev.ru/about/" class="btn btn-blue">Познакомиться с моей историей можно тут</a>
                     </div>
                 </div>
                 <div class="col-lg-7">
                     <div class="card">
                         <img src="img/sec_bio/quote.svg" alt="quote" class="quote">
-                        <p>Привет! <br> Меня зовут Константин Лашкевич. Уже более 20 лет я в бизнесе с акционерами Forbes, 11 лет управлял холдингами и выводил их в лидеры отрасли. Мой путь начался в университете, когда я создал несколько бизнесов,
-                            чтобы оплатить свое обучение по специальности “Менеджмент”. </p>
-                        <p>Спустя долгие годы собственного бизнеса и управления холдингами - я собрал резульаттивные практики, методы, инструменты и стратегии в методологию “Позитивного Менеджмента”. <br> Я обучаю этому ТОП-менеджеров крупных
-                            компаний и собственников, помогая им создавать эффективные команды и выводить холдинги в лидеры отрасли. </p>
-                        <p>Я верю в то, что мотивация людей через обучение и стремление к высоким целям создает прорывы в личных и корпоративных результатах. Моя идеология подтверждена практикой и сейчас я рад передать свои знания и навыки через
-                            <span class="font-weight-bold">Акселерацию Людей и Бизнесов.</span></p>
-                        <p class="font-weight-bold"><i>“Позитивный менеджмент - это новые прорывы, достижения и успех!”</i> </p>
+                        <p>
+                              Меня зовут Ильдар Валиев!<br>
+                            👔 Сертифицированный бизнес тренер
+                            💯 Харизматичный, Умею обучать людей
+                            📘 Автор книги «Быть СЧАСТЛИВЫМ»
+                            😉 Помогаю реализовать потенциал Личности и Компании
+                          </p><p>
+                            Я считаю, что Каждый из людей имеет все возможности для того, что бы Быть СЧАСТЛИВЫМ. Нужно только действовать и развивать в себе нужные навыки. Поэтому я стал изучать навыки и делиться своим опытом с друзьями и коллегами. В итоге мои рассказы переросли в Книгу «Быть СЧАСТЛИВЫМ» -  в которой я рассказываю, как с помощью развития своего потенциала становиться Успешнее и Увереннее!
+                          </p><p>
+                            Каждый из навыков, приведенных в книге, дает возможность использовать свои ресурсы более эффективно и целенаправленно. Каждый из них поможет усовершенствовать коммуникативные инструменты Вашей личности, а в последствии, через расширение полезных связей, стать Счастливым человеком.
+                          </p><p>
+                            Не даром в одной из народных поговорок говорят: «не имей сто рублей, а имей сто друзей". От себя добавлю, что всех успешных людей объединяет то, что они научились окружать себя максимально полезными контактами, а для этого и сами становились очень интересными людьми.
+                      </p>
                     </div>
                 </div>
             </div>
