update: second section design update

--- a/index.html
+++ b/index.html
@@ -77,23 +77,18 @@
                 прислушиваться?</h2>
 
             <div class="col-12 d-flex row justify-content-between w-100 p-0 mb-3">
-                <div class="reason reason-1 col-lg-auto col-md-12 mb-3  mt-3 d-flex align-items-center "><img alt=""
-                                                                                                          src="img/sec_reasons/r1.png"/>
-                    <p>20 лет в бизнесе с акционерами FORBES</p></div>
-                <div class="reason reason-2 col-lg-auto col-md-12 mb-3  mt-3 d-flex align-items-center"><img alt=""
-                                                                                                          src="img/sec_reasons/r2.png"/>
-                    <p>Инвестор и партнер в проекте "Smart Expert", идеолог позитивного менеджмента</p></div>
-                <div class="reason reason-3 col-lg-auto col-md-12 mb-3  mt-3 d-flex align-items-center"><img alt=""
-                                                                                                          src="img/sec_reasons/r3.png"/>
-                    <p>11 лет управления холдингами с общим оборотом более
+                <div class="reason reason-1 col-lg-auto col-md-12 mb-3  mt-3 d-flex align-items-center ">
+                    <img alt="" src="img/sec_duplicated/check.png"> <p>20 лет в бизнесе с акционерами FORBES</p></div>
+                <div class="reason reason-2 col-lg-auto col-md-12 mb-3  mt-3 d-flex align-items-center">
+                    <img alt="" src="img/sec_duplicated/check.png"> <p>Инвестор и партнер в проекте "Smart Expert", идеолог позитивного менеджмента</p></div>
+                <div class="reason reason-3 col-lg-auto col-md-12 mb-3  mt-3 d-flex align-items-center">
+                    <img alt="" src="img/sec_duplicated/check.png"><p>11 лет управления холдингами с общим оборотом более
                         $1,8 млрд. в год</p></div>
-                <div class="reason reason-4 col-lg-auto col-md-12 mb-3 mt-3 d-flex align-items-center"><img alt=""
-                                                                                                         src="img/sec_reasons/r4.png"/>
-                    <p>Прошел путь от стажера до бизнес партнера и инвестора</p></div>
+                <div class="reason reason-4 col-lg-auto col-md-12 mb-3 mt-3 d-flex align-items-center">
+                    <img alt="" src="img/sec_duplicated/check.png"><p>Прошел путь от стажера до бизнес партнера и инвестора</p></div>
                 <div class="col-12 d-flex p-0 m-0 justify-content-center">
-                <div style="justify-self: center" class="reason reason-auto col-lg-5 col-md-12 mb-3 mt-3 d-flex align-items-center"><img alt=""
-                                                                                                         src="img/sec_reasons/r5.png"/>
-                    <p>Возглавлял холдинги RFP Group, "ННК", "Вторчермет НЛМК" и вывел в лидеры рынка</p></div>
+                <div style="justify-self: center" class="reason reason-auto col-lg-5 col-md-12 mb-3 mt-3 d-flex align-items-center">
+                    <img alt="" src="img/sec_duplicated/check.png"> <p>Возглавлял холдинги RFP Group, "ННК", "Вторчермет НЛМК" и вывел в лидеры рынка</p></div>
                 </div>
             </div>
             <p class="col-12 text-center mt-4 drop-link-text">Ниже ты узнаешь, чем я с тобой поделюсь и<br> поймешь, почему
