--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8 my-pb-5 pr-0 pl-0">
-                <h1>3 практических инструмента<br> для увеличения зарплаты и<br> получения должности <br>ТОП-менеджера</h1>
+                <h1>3 практических инструмента<br> для увеличения зарплаты и<br> получения должности <br>ТОП-менеджера
+                </h1>
                 <p class="undertitle">От Константина Лашкевича - профессионального СЕО и идеолога позитивного
                     менеджмента</p>
                 <form class="form-inline  my-lg-0 my-header-btn mt-5">
@@ -78,20 +79,27 @@
 
             <div class="col-12 d-flex row justify-content-between w-100 p-0 mb-3">
                 <div class="reason reason-1 col-lg-auto col-md-12 mb-3  mt-3 d-flex align-items-center ">
-                    <img alt="" src="img/sec_duplicated/check.png"> <p>20 лет в бизнесе с акционерами FORBES</p></div>
+                    <img alt="" src="img/sec_duplicated/check.png">
+                    <p>20 лет в бизнесе с акционерами FORBES</p></div>
                 <div class="reason reason-2 col-lg-auto col-md-12 mb-3  mt-3 d-flex align-items-center">
-                    <img alt="" src="img/sec_duplicated/check.png"> <p>Инвестор и партнер в проекте "Smart Expert", идеолог позитивного менеджмента</p></div>
+                    <img alt="" src="img/sec_duplicated/check.png">
+                    <p>Инвестор и партнер в проекте "Smart Expert", идеолог позитивного менеджмента</p></div>
                 <div class="reason reason-3 col-lg-auto col-md-12 mb-3  mt-3 d-flex align-items-center">
-                    <img alt="" src="img/sec_duplicated/check.png"><p>11 лет управления холдингами с общим оборотом более
+                    <img alt="" src="img/sec_duplicated/check.png">
+                    <p>11 лет управления холдингами с общим оборотом более
                         $1,8 млрд. в год</p></div>
                 <div class="reason reason-4 col-lg-auto col-md-12 mb-3 mt-3 d-flex align-items-center">
-                    <img alt="" src="img/sec_duplicated/check.png"><p>Прошел путь от стажера до бизнес партнера и инвестора</p></div>
+                    <img alt="" src="img/sec_duplicated/check.png">
+                    <p>Прошел путь от стажера до бизнес партнера и инвестора</p></div>
                 <div class="col-12 d-flex p-0 m-0 justify-content-center">
-                <div style="justify-self: center" class="reason reason-auto col-lg-5 col-md-12 mb-3 mt-3 d-flex align-items-center">
-                    <img alt="" src="img/sec_duplicated/check.png"> <p>Возглавлял холдинги RFP Group, "ННК", "Вторчермет НЛМК" и вывел в лидеры рынка</p></div>
+                    <div style="justify-self: center"
+                         class="reason reason-auto col-lg-5 col-md-12 mb-3 mt-3 d-flex align-items-center">
+                        <img alt="" src="img/sec_duplicated/check.png">
+                        <p>Возглавлял холдинги RFP Group, "ННК", "Вторчермет НЛМК" и вывел в лидеры рынка</p></div>
                 </div>
             </div>
-            <p class="col-12 text-center mt-4 drop-link-text">Ниже ты узнаешь, чем я с тобой поделюсь и<br> поймешь, почему
+            <p class="col-12 text-center mt-4 drop-link-text">Ниже ты узнаешь, чем я с тобой поделюсь и<br> поймешь,
+                почему
                 тебе это важно!</p>
             <div class="col-12 d-flex justify-content-center arrow-box mt-3">
                 <a href="#mentor">
@@ -105,7 +113,8 @@
 <section id="mentor" class="sec sec_mentor sec_duplicated">
     <div class="container">
         <div class="row pt-4 pb-5">
-            <h2 class="col-12 text-center mt-5 mb-5">Эффективный ТОП-менеджер: как получить <br>должность ТОПа в престижной
+            <h2 class="col-12 text-center mt-5 mb-5">Эффективный ТОП-менеджер: как получить <br>должность ТОПа в
+                престижной
                 компании,
                 и какие<br> навыки для этого необходимы?</h2>
             <h3 class="col-12 text-center mb-4">Получи практический 20-ти летний опыт Константина Лашкевича, ужатые в 5
@@ -159,14 +168,16 @@
 <section id="secrets" class="sec sec_mentor sec_duplicated">
     <div class="container">
         <div class="row pt-4 pb-5">
-            <h2 class="col-12 text-center mt-5 mb-5">Как выбрать наставника для Х-кратного карьерного<br> роста и сделать
+            <h2 class="col-12 text-center mt-5 mb-5">Как выбрать наставника для Х-кратного карьерного<br> роста и
+                сделать
                 настоящий прорыв в результатах?</h2>
             <h3 class="col-12 text-center mb-4">Мой первый наставник запомнился мне на всю жизнь... Такого *** и в то же
                 время столь мощного менеджера я не встречал. И знаете - он стал фундаментом для моего развития и
                 результата, который я имею сейчас. </h3>
             <div class="col-12 mt-4 p-0">
                 <div class="row d-flex block-grid justify-content-between d-flex align-items-center">
-                    <p class="col-md-12 col-lg-5 duplicated-header"><b>Я поделюсь с тобой своим опытом и ты узнаешь: </b></p>
+                    <p class="col-md-12 col-lg-5 duplicated-header"><b>Я поделюсь с тобой своим опытом и ты
+                        узнаешь: </b></p>
                     <p class="col-md-12 col-lg-5 duplicated-header"></p>
                     <div class="block-grid_item col-lg-5 col-md-12 mb-3 mt-3 bg-white">
                         <img alt="" src="img/sec_duplicated/check.png">
@@ -218,7 +229,8 @@
             <div class="col-12 mt-4 p-0">
 
                 <div class="row d-flex block-grid justify-content-between d-flex align-items-center">
-                    <p class="col-md-12 col-lg-5 duplicated-header"><b>Чтобы этой ситуации не происходило с тобой, я расскажу: </b></p>
+                    <p class="col-md-12 col-lg-5 duplicated-header"><b>Чтобы этой ситуации не происходило с тобой, я
+                        расскажу: </b></p>
                     <p class="col-md-12 col-lg-5 duplicated-header"></p>
                     <div class="block-grid_item col-lg-5 col-md-12 mb-3 mt-3 bg-white">
                         <img alt="" src="img/sec_duplicated/check.png">
@@ -265,43 +277,48 @@
             <h2 class="col-12 text-center">Мои методики и практический опыт помогли другим <br>добиться результатов!
             </h2>
 
-                <div class="sliderAuthors authors">
-                    <div class="col-12 py-5 px-4">
-                        <div class="card_profile">
-                            <div class="icon">
-                                <img src="img/sec_lesson_steps/ic_1.svg" alt="">
-                            </div>
-                            <div class="text">
-                                <h3>Обучайтесь на любом удобном устройстве</h3>
-                                <p>Сообщество Smart Expert позволяет вам развиваться и обучаться в любом месте на удобном для вас устройстве: компьютер, телефон, планшет. Вы обязательно получите максимум приятных эмоций, и самое главное - эффективно
-                                    усвоите информацию и быстро перейдете к практическим действиям!</p>
-                            </div>
+            <div class="sliderAuthors authors">
+                <div class="col-12 py-5 px-4">
+                    <div class="card_profile d-flex row">
+                        <div class="icon-box col-lg-5 col-12">
+
+                            <img src="img/sec_methods/rev1.png" alt="">
+                            <h3>Евгений Маташ</h3>
+                            <h4>Менеджер по работе с партнерами</h4>
+                        </div>
+                        <div class="video col-12 col-lg-7 pl-0 pr-0">
+                            <iframe src="https://www.youtube.com/embed/nTrMLtBwpEI" frameborder="0" allowfullscreen></iframe>
                         </div>
                     </div>
-                    <div class="col-12 py-5 px-4">
-                        <div class="card_profile">
-                            <div class="icon">
-                                <img src="img/sec_lesson_steps/ic_1.svg" alt="">
-                            </div>
-                            <div class="text">
-                                <h3>Обучайтесь на любом удобном устройстве</h3>
-                                <p>Сообщество Smart Expert позволяет вам развиваться и обучаться в любом месте на удобном для вас устройстве: компьютер, телефон, планшет. Вы обязательно получите максимум приятных эмоций, и самое главное - эффективно
-                                    усвоите информацию и быстро перейдете к практическим действиям!</p>
-                            </div>
+                </div>
+                <div class="col-12 py-5 px-4">
+                    <div class="card_profile">
+                        <div class="icon">
+                            <img src="img/sec_lesson_steps/ic_1.svg" alt="">
+                        </div>
+                        <div class="text">
+                            <h3>Обучайтесь на любом удобном устройстве</h3>
+                            <p>Сообщество Smart Expert позволяет вам развиваться и обучаться в любом месте на удобном
+                                для вас устройстве: компьютер, телефон, планшет. Вы обязательно получите максимум
+                                приятных эмоций, и самое главное - эффективно
+                                усвоите информацию и быстро перейдете к практическим действиям!</p>
                         </div>
                     </div>
-                    <div class="col-12 py-5 px-4">
-                        <div class="card_profile">
-                            <div class="icon">
-                                <img src="img/sec_lesson_steps/ic_1.svg" alt="">
-                            </div>
-                            <div class="text">
-                                <h3>Обучайтесь на любом удобном устройстве</h3>
-                                <p>Сообщество Smart Expert позволяет вам развиваться и обучаться в любом месте на удобном для вас устройстве: компьютер, телефон, планшет. Вы обязательно получите максимум приятных эмоций, и самое главное - эффективно
-                                    усвоите информацию и быстро перейдете к практическим действиям!</p>
-                            </div>
+                </div>
+                <div class="col-12 py-5 px-4">
+                    <div class="card_profile">
+                        <div class="icon">
+                            <img src="img/sec_lesson_steps/ic_1.svg" alt="">
+                        </div>
+                        <div class="text">
+                            <h3>Обучайтесь на любом удобном устройстве</h3>
+                            <p>Сообщество Smart Expert позволяет вам развиваться и обучаться в любом месте на удобном
+                                для вас устройстве: компьютер, телефон, планшет. Вы обязательно получите максимум
+                                приятных эмоций, и самое главное - эффективно
+                                усвоите информацию и быстро перейдете к практическим действиям!</p>
                         </div>
                     </div>
+                </div>
 
 
             </div>
@@ -423,11 +440,11 @@
                 }
             }]
         });
-        $('.sleder_wrapp .arrow-prev').click(function() {
+        $('.sleder_wrapp .arrow-prev').click(function () {
             sliderAuthors.goToPrevSlide();
         });
 
-        $('.sleder_wrapp .arrow-next').click(function() {
+        $('.sleder_wrapp .arrow-next').click(function () {
             sliderAuthors.goToNextSlide();
         });
 
