fix: slider arrows

--- a/index.html
+++ b/index.html
@@ -276,52 +276,51 @@
         <div class="row pt-5 pb-5">
             <h2 class="col-12 text-center">Мои методики и практический опыт помогли другим <br>добиться результатов!
             </h2>
+                <div class="sliderAuthors authors ">
+                    <div class="col-12 py-5 px-4">
+                        <div class="card_profile d-flex row">
+                            <div class="icon-box col-lg-5 col-12">
 
-            <div class="sliderAuthors authors">
-                <div class="col-12 py-5 px-4">
-                    <div class="card_profile d-flex row">
-                        <div class="icon-box col-lg-5 col-12">
-
-                            <img src="img/sec_methods/rev1.png" alt="">
-                            <h3>Евгений Маташ</h3>
-                            <h4>Менеджер по работе с партнерами</h4>
+                                <img src="img/sec_methods/rev1.png" alt="">
+                                <h3>Евгений Маташ</h3>
+                                <h4>Менеджер по работе с партнерами</h4>
+                            </div>
+                            <div class="video col-12 col-lg-7 pl-0 pr-0">
+                                <iframe src="https://www.youtube.com/embed/nTrMLtBwpEI" frameborder="0"
+                                        allowfullscreen></iframe>
+                            </div>
                         </div>
-                        <div class="video col-12 col-lg-7 pl-0 pr-0">
-                            <iframe src="https://www.youtube.com/embed/nTrMLtBwpEI" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                    <div class="col-12 py-5 px-4">
+                        <div class="card_profile d-flex row">
+                            <div class="icon-box col-lg-5 col-12">
+
+                                <img src="img/sec_methods/rev1.png" alt="">
+                                <h3>Евгений Маташ</h3>
+                                <h4>Менеджер по работе с партнерами</h4>
+                            </div>
+                            <div class="video col-12 col-lg-7 pl-0 pr-0">
+                                <iframe src="https://www.youtube.com/embed/nTrMLtBwpEI" frameborder="0"
+                                        allowfullscreen></iframe>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 py-5 px-4">
+                        <div class="card_profile d-flex row">
+                            <div class="icon-box col-lg-5 col-12">
+
+                                <img src="img/sec_methods/rev1.png" alt="">
+                                <h3>Евгений Маташ</h3>
+                                <h4>Менеджер по работе с партнерами</h4>
+                            </div>
+                            <div class="video col-12 col-lg-7 pl-0 pr-0">
+                                <iframe src="https://www.youtube.com/embed/nTrMLtBwpEI" frameborder="0"
+                                        allowfullscreen></iframe>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-12 py-5 px-4">
-                    <div class="card_profile">
-                        <div class="icon">
-                            <img src="img/sec_lesson_steps/ic_1.svg" alt="">
-                        </div>
-                        <div class="text">
-                            <h3>Обучайтесь на любом удобном устройстве</h3>
-                            <p>Сообщество Smart Expert позволяет вам развиваться и обучаться в любом месте на удобном
-                                для вас устройстве: компьютер, телефон, планшет. Вы обязательно получите максимум
-                                приятных эмоций, и самое главное - эффективно
-                                усвоите информацию и быстро перейдете к практическим действиям!</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 py-5 px-4">
-                    <div class="card_profile">
-                        <div class="icon">
-                            <img src="img/sec_lesson_steps/ic_1.svg" alt="">
-                        </div>
-                        <div class="text">
-                            <h3>Обучайтесь на любом удобном устройстве</h3>
-                            <p>Сообщество Smart Expert позволяет вам развиваться и обучаться в любом месте на удобном
-                                для вас устройстве: компьютер, телефон, планшет. Вы обязательно получите максимум
-                                приятных эмоций, и самое главное - эффективно
-                                усвоите информацию и быстро перейдете к практическим действиям!</p>
-                        </div>
-                    </div>
-                </div>
 
-
-            </div>
         </div>
     </div>
 </section>
