--- a/index.html
+++ b/index.html
@@ -128,10 +128,9 @@
                         <div class="icon_avatar" style="background-image: url('img/sec_bio/ildar.jpg')"></div>
                         <h5>1ldar Valiev</h5>
 
-                        <div class="soc_links_wrapp justify-content-center">
-
+                        <div class="soc_links_wrapp">
                             <a href="https://www.facebook.com/1ldarValieV" class="item"><img src="img/soc_links/fb.svg" alt="fb"></a>
-
+                            <a href="https://www.youtube.com/channel/UChOPeLIHD2uMxsj1QQzKWcw" class="item"><img src="img/soc_links/yt.svg" alt="yt" width="26px"></a>
                             <a href="https://www.instagram.com/1ldarvaliev/" class="item"><img src="img/soc_links/in.svg" alt="in"></a>
                         </div>
                         <a href="http://1ldarvaliev.ru/about/" class="btn btn-blue">Познакомиться с моей историей можно тут</a>
